fixed technical module

--- a/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.html
+++ b/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="products && products.length != 0">
+<ng-container *ngIf="products && products?.length != 0">
 
   <h2>Focal Mechanism</h2>
 
@@ -15,9 +15,9 @@
       <mat-cell *matCellDef="let tensor" class="unpreferred">
         <a
             [routerLink]="['/', event?.id, 'focal-mechanism']"
-            [queryParams]="{ source: tensor.product.source,
-                code: tensor.product.code }">
-          {{ tensor.product?.properties?.eventsource.toUpperCase() }}
+            [queryParams]="{ source: tensor?.product?.source,
+                code: tensor?.product?.code }">
+          {{ tensor.product?.properties?.eventsource?.toUpperCase() }}
         </a>
       </mat-cell>
     </ng-container>
@@ -70,7 +70,7 @@
       <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
       <mat-cell *matCellDef="let tensor">
         <shared-product-attribution
-            [product]="tensor.product">
+            [product]="tensor?.product">
         </shared-product-attribution>
       </mat-cell>
     </ng-container>
