--- a/src/app/technical/moment-tensor-summary/moment-tensor-summary.component.html
+++ b/src/app/technical/moment-tensor-summary/moment-tensor-summary.component.html
@@ -20,8 +20,8 @@
         </ng-container>
         <a [routerLink]="['/', event?.id, 'moment-tensor']"
            [queryParams]="{
-            source: tensor.product.source,
-            code: tensor.product.code
+            source: tensor?.product?.source,
+            code: tensor?.product?.code
             }">
            {{ tensor?.product?.properties?.eventsource?.toUpperCase() }}
         </a>
@@ -44,7 +44,7 @@
     <ng-container matColumnDef="magnitude">
       <mat-header-cell *matHeaderCellDef>Magnitude</mat-header-cell>
       <mat-cell *matCellDef="let tensor">
-        {{ formatterService.number(tensor.magnitude, 1) }}
+        {{ formatterService.number(tensor?.magnitude, 1) }}
         {{ tensor?.type }}
       </mat-cell>
     </ng-container>
@@ -52,7 +52,7 @@
     <ng-container matColumnDef="depth">
       <mat-header-cell *matHeaderCellDef>Depth</mat-header-cell>
       <mat-cell *matCellDef="let tensor">
-        {{ formatterService.depth(tensor.depth, 'km') }}
+        {{ formatterService.depth(tensor?.depth, 'km') }}
       </mat-cell>
     </ng-container>
 
@@ -61,7 +61,7 @@
         <abbr title="Percent Double Couple">% DC</abbr>
       </mat-header-cell>
       <mat-cell *matCellDef="let tensor">
-        {{ formatterService.number(100 * tensor.percentDC, 0) }} %
+        {{ formatterService.number(100 * tensor?.percentDC, 0) }} %
       </mat-cell>
     </ng-container>
 
@@ -69,7 +69,7 @@
       <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
       <mat-cell *matCellDef="let tensor">
         <shared-product-attribution
-            [product]="tensor.product">
+            [product]="tensor?.product">
         </shared-product-attribution>
       </mat-cell>
     </ng-container>
