--- a/src/app/tell-us/form/form.component.html
+++ b/src/app/tell-us/form/form.component.html
@@ -37,7 +37,7 @@
         <mat-form-field>
           <input matInput
               [(ngModel)]="answers.ciim_time"
-              aria-label="Time form input"
+              aria-label="Time of Earthquake"
               [placeholder]="language?.eventTime?.ciim_time?.placeholder"/>
         </mat-form-field>
       </tell-us-fieldset>
