--- a/src/app/origin/magnitude/magnitude.component.html
+++ b/src/app/origin/magnitude/magnitude.component.html
@@ -1,4 +1,3 @@
-
 <h3>Magnitudes</h3>
 
 <div *ngFor="let magnitude of magnitudes"
@@ -32,7 +31,9 @@
   <mat-expansion-panel [disabled]="!magnitude.contributions.length">
     <mat-expansion-panel-header>
       <ng-container *ngIf="magnitude.contributions.length; else noContributions">
-        Station Details
+        <a class="contributions">
+          Station Details
+        </a>
       </ng-container>
     </mat-expansion-panel-header>
 
