Update origin module > origin component: wrap at 80 chars, update to scss, update spacing

--- a/src/app/origin/origin/origin.component.html
+++ b/src/app/origin/origin/origin.component.html
@@ -6,7 +6,6 @@
     <h2>Origin</h2>
   </ng-container>
 
-
   <ng-container *ngIf="eventService.product$ | async">
     <mdc-tab-bar-scroller>
       <mdc-tab-bar-scroll-back>
@@ -38,7 +37,6 @@
   </ng-container>
 
   <!-- container with footer attribute is added before downloads -->
-  <ng-container footer>
-  </ng-container>
+  <ng-container footer></ng-container>
 
 </product-page>
