Update origin module > phase component: wrap at 80 chars, update to scss, update spacing, comment code

--- a/src/app/origin/phase/phase.component.html
+++ b/src/app/origin/phase/phase.component.html
@@ -89,7 +89,7 @@
 </ng-container>
 
 <ng-template #noEvent>
-  <p>Loading event</p>
+  <p class="alert error">No data available.</p>
 </ng-template>
 
 <ng-template #noQuakeml>
