--- a/src/app/focal-mechanism/attribution/attribution.component.html
+++ b/src/app/focal-mechanism/attribution/attribution.component.html
@@ -6,7 +6,8 @@
     <dt>Data Source</dt>
     <dd>
       <shared-product-attribution
-          [product]="{ source: tensor.product?.properties['beachball-source'] || tensor.product?.source }">
+          [product]="{ source: tensor.product?.properties['beachball-source'] ||
+          tensor.product?.source }">
       </shared-product-attribution>
     </dd>
 
