undo, made change for testing

--- a/src/app/focal-mechanism/focal-mechanism/focal-mechanism.component.html
+++ b/src/app/focal-mechanism/focal-mechanism/focal-mechanism.component.html
@@ -5,7 +5,7 @@
     <h2>Focal Mechanism</h2>
   </ng-container>
 
-  <ng-container *ngIf="eventService.prodct$ | async | sharedTensor as tensor;
+  <ng-container *ngIf="eventService.product$ | async | sharedTensor as tensor;
       else noTensor">
     <div class="row">
       <div class="column">
