--- a/src/app/shakemap/pga/pga.component.html
+++ b/src/app/shakemap/pga/pga.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="eventService.product$ | async; let shakemap">
+<ng-container *ngIf="eventService?.product$ | async; let shakemap">
 
   <a *ngIf="shakemap?.contents['download/cont_pga.json']; else noOverlay"
       [routerLink]="'../../map'"
@@ -21,7 +21,7 @@
   <ng-template #noOverlay>
     <img
         *ngIf="shakemap?.contents['download/pga.jpg']; else noImage"
-        src="{{ shakemap.contents['download/pga.jpg'].url }}"
+        src="{{ shakemap?.contents['download/pga.jpg'].url }}"
         alt="ShakeMap peak ground acceleration image">
 
     <ng-template #noImage>
