--- a/src/app/shakemap/pgv/pgv.component.html
+++ b/src/app/shakemap/pgv/pgv.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="eventService.product$ | async; let shakemap">
+<ng-container *ngIf="eventService?.product$ | async; let shakemap">
 
   <a *ngIf="shakemap?.contents['download/cont_pgv.json']; else noOverlay"
       [routerLink]="'../../map'"
@@ -22,7 +22,7 @@
   <ng-template #noOverlay>
     <img
         *ngIf="shakemap?.contents['download/pgv.jpg']; else noImage"
-        src="{{ shakemap.contents['download/pgv.jpg'].url }}"
+        src="{{ shakemap?.contents['download/pgv.jpg'].url }}"
         alt="ShakeMap peak ground velocity image">
 
     <ng-template #noImage>
