Update oaf > commentary-details component

--- a/src/app/oaf/commentary-details/commentary-details.component.html
+++ b/src/app/oaf/commentary-details/commentary-details.component.html
@@ -9,7 +9,8 @@
 
   <ng-template #someProbability>
     <ng-container *ngIf="bin.probability <= 0.01; else moreProbability">
-      1 in {{ 1 / bin.probability | sharedSignificantFigure: 1  | sharedNumberWithSeparator }},
+      1 in {{ 1 / bin.probability | sharedSignificantFigure: 1  |
+          sharedNumberWithSeparator }},
     </ng-container>
 
     <ng-template #moreProbability>
