--- a/src/app/shakemap/intensity/intensity.component.html
+++ b/src/app/shakemap/intensity/intensity.component.html
@@ -1,31 +1,32 @@
-<ng-container *ngIf="eventService.product$ | async; let shakemap">
+<ng-container *ngIf="eventService?.product$ | async; let shakemap">
 
   <ng-container
       *ngIf="shakemap?.contents['download/cont_mi.json']; else noOverlay">
     <a [routerLink]="'../../map'"
-        [queryParams]="{
-          'shakemap-code': shakemap?.code,
-          'shakemap-source': shakemap?.source,
-          'shakemap-intensity': true,
-          'shakemap-stations': true
-        }">
+       [queryParams]="{
+         'shakemap-code': shakemap?.code,
+         'shakemap-source': shakemap?.source,
+         'shakemap-intensity': true,
+         'shakemap-stations': true
+      }">
       <shared-map
-          [overlays]="shakemap | shakemapOverlays:['shakemap-intensity', 'shakemap-stations']"
-          [showScaleControl]="true"
-          [showAttributionControl]="false">
+        [overlays]="shakemap | shakemapOverlays:['shakemap-intensity',
+          'shakemap-stations']"
+        [showScaleControl]="true"
+        [showAttributionControl]="false">
       </shared-map>
     </a>
 
     <img
         class="legend"
-        src="./assets/shakemap-intensity-legend.png" 
+        src="./assets/shakemap-intensity-legend.png"
         alt="ShakeMap intensity legend">
   </ng-container>
 
   <ng-template #noOverlay>
     <img
         *ngIf="shakemap?.contents['download/intensity.jpg']; else noImage"
-        src="{{ shakemap.contents['download/intensity.jpg'].url }}"
+        src="{{ shakemap?.contents['download/intensity.jpg'].url }}"
         alt="ShakeMap intensity image">
 
     <ng-template #noImage>
