--- a/src/app/shakemap/metadata/metadata.component.html
+++ b/src/app/shakemap/metadata/metadata.component.html
@@ -1,18 +1,18 @@
 <div class="info-container" *ngIf="metadata">
 
-  <div class="input column" *ngIf="metadata.input as input">
+  <div class="input column" *ngIf="metadata?.input as input">
     <h2>Input</h2>
     <shakemap-input [smInput]="input"></shakemap-input>
   </div>
-    
-  <div class="output column" *ngIf="metadata.output as output">
+
+  <div class="output column" *ngIf="metadata?.output as output">
     <h2>Output</h2>
     <shakemap-output [smOutput]="output"></shakemap-output>
   </div>
 
-  <div class="processing column" *ngIf="metadata.processing as processing">
+  <div class="processing column" *ngIf="metadata?.processing as processing">
     <h2>Processing</h2>
-      <shakemap-processing [smProcessing]="processing"></shakemap-processing>
+    <shakemap-processing [smProcessing]="processing"></shakemap-processing>
   </div>
-  
+
 </div>
