--- a/src/app/shakemap/metadata/output/output.component.html
+++ b/src/app/shakemap/metadata/output/output.component.html
@@ -7,11 +7,11 @@
     </mat-expansion-panel-header>
 
     <ng-template matExpansionPanelContent>
-      <mat-table [dataSource]="smOutput.ground_motions">
-        <mat-header-row *matHeaderRowDef="headers.groundMotions">
+      <mat-table [dataSource]="smOutput?.ground_motions">
+        <mat-header-row *matHeaderRowDef="headers?.groundMotions">
         </mat-header-row>
         <mat-row *matRowDef="let myRowData;
-            columns: headers.groundMotions"></mat-row>
+            columns: headers?.groundMotions"></mat-row>
 
         <ng-container matColumnDef="type">
           <mat-header-cell *matHeaderCellDef>
@@ -22,10 +22,10 @@
                     class="mat-header-cell"
                     *matCellDef="let groundMotion">
 
-            <ng-container *ngIf="names.groundMotions[groundMotion.type]
-                as name; else noName">
+            <ng-container *ngIf="names?.groundMotions[groundMotion.type]
+                          as name; else noName">
               <ng-container *ngIf="abbreviations[groundMotion.type] as abbr;
-                  else noAbbr">
+                            else noAbbr">
 
                 <abbr title="{{ abbr }}">{{ name }}</abbr>
               </ng-container>
@@ -82,20 +82,20 @@
     </mat-expansion-panel-header>
 
     <ng-template matExpansionPanelContent>
-      <mat-table [dataSource]="smOutput.map_information">
-        <mat-header-row *matHeaderRowDef="headers.mapInformation">
+      <mat-table [dataSource]="smOutput?.map_information">
+        <mat-header-row *matHeaderRowDef="headers?.mapInformation">
         </mat-header-row>
         <mat-row *matRowDef="let myRowData;
-            columns: headers.mapInformation"></mat-row>
+                 columns: headers?.mapInformation"></mat-row>
 
         <ng-container matColumnDef="type">
           <mat-header-cell *matHeaderCellDef>
             Type
           </mat-header-cell>
           <mat-cell [attr.role]="'rowheader'"
-                      [class.mat-cell]="false"
-                      class="mat-header-cell"
-                      *matCellDef="let mapInfo">
+                    [class.mat-cell]="false"
+                    class="mat-header-cell"
+                    *matCellDef="let mapInfo">
             {{ names.mapInformation[mapInfo.type] }}
           </mat-cell>
         </ng-container>
@@ -131,27 +131,27 @@
     </mat-expansion-panel-header>
 
     <ng-template matExpansionPanelContent>
-      <dl class="description-table" *ngIf="smOutput.uncertainty
+      <dl class="description-table" *ngIf="smOutput?.uncertainty
           as uncertainty">
 
         <dt>Mean of map uncertainty</dt>
-        <dd *ngIf="uncertainty.mean_uncertainty_ratio as ratio;
+        <dd *ngIf="uncertainty?.mean_uncertainty_ratio as ratio;
             else missingData">
           {{ ratio | sharedNumber }}
         </dd>
 
         <dt>Empirical ShakeMap grade</dt>
-        <dd *ngIf="uncertainty.grade as grade; else missingData">
+        <dd *ngIf="uncertainty?.grade as grade; else missingData">
           {{ grade }}
         </dd>
 
         <dt>Flagged Seismic Stations</dt>
-        <dd *ngIf="uncertainty.total_flagged_mi as miFlag; else missingData">
+        <dd *ngIf="uncertainty?.total_flagged_mi as miFlag; else missingData">
           {{ miFlag }}
         </dd>
 
         <dt>Flagged DYFI stations</dt>
-        <dd *ngIf="uncertainty.total_flagged_pgm as pgmFlag; else missingData">
+        <dd *ngIf="uncertainty?.total_flagged_pgm as pgmFlag; else missingData">
           {{ pgmFlag }}
         </dd>
 
