--- a/src/app/shakemap/pga/pga.component.html
+++ b/src/app/shakemap/pga/pga.component.html
@@ -11,7 +11,8 @@
       }">
 
     <shared-map
-        [overlays]="shakemap | shakemapOverlays:['shakemap-pga', 'shakemap-stations']"
+        [overlays]="shakemap | shakemapOverlays:['shakemap-pga',
+          'shakemap-stations']"
         [baselayer]="'Grayscale'"
         [showScaleControl]="true"
         [showAttributionControl]="false">
