--- a/src/app/shared/ngx-charts/line-chart/line-series/line-series.component.html
+++ b/src/app/shared/ngx-charts/line-chart/line-series/line-series.component.html
@@ -11,7 +11,7 @@
       class="line-highlight"
       [data]="data"
       [path]="areaPath"
-      [fill]="hasGradient ? gradientUrl : colors.getColor(data.name)"
+      [fill]="hasGradient ? gradientUrl : colors?.getColor(data.name)"
       [opacity]="0.25"
       [startOpacity]="0"
       [gradient]="true"
@@ -34,7 +34,7 @@
       class="line-series-range"
       [data]="data"
       [path]="outerPath"
-      [fill]="hasGradient ? gradientUrl : colors.getColor(data.name)"
+      [fill]="hasGradient ? gradientUrl : colors?.getColor(data.name)"
       [class.active]="isActive(data)"
       [class.inactive]="isInactive(data)"
       [opacity]="rangeFillOpacity"
