Cleanup dyfi and add fallbacks
Fallback for intensity vs. distance, and stop showing tabs for products that don't exist

--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -1,27 +1,43 @@
-<div class="chart-container">
+<ng-container *ngIf="bubbleSeries && lineSeries; else noData">
   <h2>Intensity vs. Distance</h2>
-  <ng-container *ngIf="bubbleSeries && lineSeries">
+  <div class="chart-container">
     <bubble-line-chart-component
-      [scheme]="colorScheme"
-      [colorSchemeLine]="colorScheme"
-      [customColors]="customColors"
-      [results]="allResults"
-      [animations]="animations"
-      [lineChart]="lineSeries"
-      [bubbleChart]="bubbleSeries"
-      [tooltipDisabled]="false"
-      [gradient]="gradient"
-      [xAxis]="showXAxis"
-      [yAxis]="showYAxis"
-      [yScaleMin]="1"
-      [yScaleMax]="10"
-      [legend]="showLegend"
-      [scaleType]="scaleType"
-      [showGridLines]="true"
-      [showXAxisLabel]="showXAxisLabel"
-      [showYAxisLabel]="showYAxisLabel"
-      [xAxisLabel]="xAxisLabel"
-      [yAxisLabel]="yAxisLabel">
+        [scheme]="colorScheme"
+        [colorSchemeLine]="colorScheme"
+        [customColors]="customColors"
+        [results]="allResults"
+        [animations]="animations"
+        [lineChart]="lineSeries"
+        [bubbleChart]="bubbleSeries"
+        [tooltipDisabled]="false"
+        [gradient]="gradient"
+        [xAxis]="showXAxis"
+        [yAxis]="showYAxis"
+        [yScaleMin]="1"
+        [yScaleMax]="10"
+        [legend]="showLegend"
+        [scaleType]="scaleType"
+        [showGridLines]="true"
+        [showXAxisLabel]="showXAxisLabel"
+        [showYAxisLabel]="showYAxisLabel"
+        [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel">
     </bubble-line-chart-component>
+  </div>
+</ng-container>
+
+<ng-template #noData>
+  <ng-container 
+      *ngIf="product | sharedProductContent:product.code + '_plot_atten.jpg'
+      as image;
+      else noImage">
+    <img
+      *ngIf="image.url; else noImage"
+      src="{{ image.url }}"
+      alt="DYFI intensity vs. distance plot">
   </ng-container>
-</div>
+
+  <ng-template #noImage>
+    <h1>Not available for this event</h1>
+  </ng-template>
+</ng-template>
