--- a/src/app/dyfi/intensity/intensity.component.html
+++ b/src/app/dyfi/intensity/intensity.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="eventService.product$ | async; let dyfi">
-  <ng-container *ngIf="dyfi.contents[dyfi.code + '_ciim_geo.jpg'] as intensity; else noImage">
-    <ng-container *ngIf="intensity?.url as url; else noImage">
-      <img src="{{ url }}" alt="DYFI intensity map">
-    </ng-container>
-  </ng-container>
+  <img 
+      *ngIf="dyfi.contents[dyfi.code + '_ciim_geo.jpg'] &&
+      dyfi.contents[dyfi.code + '_ciim_geo.jpg'].url; else noImage"
+      src="{{ dyfi.contents[dyfi.code + '_ciim_geo.jpg'].url }}"
+      alt="DYFI intensity map">
 
   <ng-template #noImage>
     <h1>Not available for this event</h1>
