--- a/src/app/dyfi/dyfi/dyfi.component.html
+++ b/src/app/dyfi/dyfi/dyfi.component.html
@@ -1,7 +1,5 @@
-<!-- productType attribute defines type of product to load -->
 <product-page productType="dyfi">
 
-  <!-- container with header attribute is added before attribution -->
   <ng-container header>
     <h3>Did You Feel It?</h3>
     <a [routerLink]="'../tellus'"
@@ -11,32 +9,37 @@
     </a>
   </ng-container>
 
-  <ng-container *ngIf="eventService.product$ | async">
-  <!-- routes/components in ../origin-routing.module.ts -->
+  <ng-container *ngIf="eventService.product$ | async as dyfi">
     <mdc-tab-bar-scroller>
       <mdc-tab-bar-scroll-back>
         <mdc-icon>navigate_before</mdc-icon>
       </mdc-tab-bar-scroll-back>
       <mdc-tab-bar-scroll-frame>
         <nav mdc-tab-bar>
-          <a mdc-tab mdcRouter [routerLink]="'./intensity'"
-             queryParamsHandling="preserve">
+          <a *ngIf="dyfi | sharedProductContent:dyfi.code + '_ciim_geo.jpg'"
+              mdc-tab mdcRouter [routerLink]="'./intensity'"
+              queryParamsHandling="preserve">
             Intensity
           </a>
-          <a mdc-tab mdcRouter [routerLink]="'./zip'"
-             queryParamsHandling="preserve">
+          <a *ngIf="dyfi | sharedProductContent:dyfi.code + '_ciim.jpg'"
+              mdc-tab mdcRouter [routerLink]="'./zip'"
+              queryParamsHandling="preserve">
             ZIP Map
           </a>
-          <a mdc-tab mdcRouter [routerLink]="'./intensity-vs-distance'"
-             queryParamsHandling="preserve">
+          <a *ngIf="dyfi | sharedProductContent:
+              'dyfi_plot_atten.json':dyfi.code + '_plot_atten.jpg'"
+              mdc-tab mdcRouter [routerLink]="'./intensity-vs-distance'"
+              queryParamsHandling="preserve">
             Intensity Vs. Distance
           </a>
-          <a mdc-tab mdcRouter [routerLink]="'./responses-vs-time'"
-             queryParamsHandling="preserve">
+          <a *ngIf="dyfi | sharedProductContent:'dyfi_plot_numresp.json'"
+              mdc-tab mdcRouter [routerLink]="'./responses-vs-time'"
+              queryParamsHandling="preserve">
             Responses Vs. Time
           </a>
-          <a mdc-tab mdcRouter [routerLink]="'./responses'"
-             queryParamsHandling="preserve">
+          <a *ngIf="dyfi | sharedProductContent:'cdi_zip.xml'"
+              mdc-tab mdcRouter [routerLink]="'./responses'"
+              queryParamsHandling="preserve">
             DYFI Responses
           </a>
         </nav>
@@ -49,7 +52,6 @@
     <router-outlet></router-outlet>
   </ng-container>
 
-  <!-- container with footer attribute is added before downloads -->
   <ng-container footer>
   </ng-container>
 
