Update ground-failure > summary component

--- a/src/app/ground-failure/summary/summary.component.html
+++ b/src/app/ground-failure/summary/summary.component.html
@@ -20,7 +20,8 @@
 
       <button mat-raised-button
           [routerLink]="'../../map'"
-          [queryParams]="{ 'ground-failure-landslide': true, 'shakemap-intensity': false, 'bounds': getMapBounds(product) }">
+          [queryParams]="{ 'ground-failure-landslide': true,
+              'shakemap-intensity': false, 'bounds': getMapBounds(product) }">
         View Landslide Map
       </button>
     </section>
@@ -44,7 +45,8 @@
 
       <button mat-raised-button
           [routerLink]="'../../map'"
-          [queryParams]="{ 'ground-failure-liquefaction': true, 'shakemap-intensity': false, 'bounds': getMapBounds(product) }">
+          [queryParams]="{ 'ground-failure-liquefaction': true,
+              'shakemap-intensity': false, 'bounds': getMapBounds(product) }">
         View Liquefaction Map
       </button>
     </section>
