--- a/src/app/dyfi/responses-vs-time/responses-vs-time.component.html
+++ b/src/app/dyfi/responses-vs-time/responses-vs-time.component.html
@@ -20,5 +20,17 @@
 </ng-container>
 
 <ng-template #noData>
-  <h1>Not available for this event</h1>
+  <ng-container 
+      *ngIf="product | sharedProductContent:product.code + '_plot_numresp.jpg'
+      as image;
+      else noImage">
+    <img
+      *ngIf="image.url; else noImage"
+      src="{{ image.url }}"
+      alt="DYFI responses vs. time plot">
+  </ng-container>
+
+  <ng-template #noImage>
+    <h1>Not available for this event</h1>
+  </ng-template>
 </ng-template>
